Fixed: Mobile nav flicker on bell icon click bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -318,7 +318,7 @@ body {
   --background-500: #181818;
   --background-900: #111111;
   --modal: var(--background-300);
-  --border: #212121;
+  --border: #2c2c2c;
   --box-shadow-header: 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
   --box-shadow-100: 1px 0 5px 0 #0d0d0d;
   --box-shadow-300: 1px 1px 4px 0px rgba(0, 0, 0, 0.75);
@@ -1222,10 +1222,6 @@ body {
 }
 @media screen and (max-width: 575px) {
   .bellwindow {
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
     width: calc(100vw - 2rem);
   }
 }
