--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -22,7 +22,7 @@
     --background-900: #111111;
 
     --modal: var(--background-300);
-    --border: #212121;
+    --border: #2c2c2c;
 
     --box-shadow-header: 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
     --box-shadow-100: 1px 0 5px 0 #0d0d0d;
